Lastes Blender versions break parenting in DEMO File - BMW scene #75069

Closed
opened 2020-03-24 22:58:10 +01:00 by Grzegorz Wereszko · 15 comments

System Information
Operating system: Windows 10
Graphics card: Vega 64

Blender Version
Broken: 2.82a and 2.83 -
Worked: 2.80

Short description of error
Downloaded Blender Demo Files (https://www.blender.org/download/demo-files/)

In case of BMW_27 file (dated 2016-02-26, one of the wheels parenting is lost in current versions. See attached photo of the discrepancy.broken parenting.png

Exact steps for others to reproduce the error
Just opened the file in different blender builds.

NOTE - in latest build 94b8166a8b - part of the wheels vanish but render OK. this also occurs in Classroom file (chairs vanish but render OK)

Should I raise separate bug report on 2.83?

**System Information** Operating system: Windows 10 Graphics card: Vega 64 **Blender Version** Broken: 2.82a and 2.83 - Worked: 2.80 **Short description of error** Downloaded Blender Demo Files (https://www.blender.org/download/demo-files/) In case of BMW_27 file (dated 2016-02-26, one of the wheels parenting is lost in current versions. See attached photo of the discrepancy.![broken parenting.png](https://archive.blender.org/developer/F8427522/broken_parenting.png) **Exact steps for others to reproduce the error** Just opened the file in different blender builds. NOTE - in latest build 94b8166a8b05 - part of the wheels vanish but render OK. this also occurs in Classroom file (chairs vanish but render OK) Should I raise separate bug report on 2.83?

Added subscriber: @Prodeous

Added subscriber: @Prodeous

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm.
This is a problem in the Workbench, if you switch to Eevee the missing objects reappear.

I can confirm. This is a problem in the Workbench, if you switch to Eevee the missing objects reappear.
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

I am not able to reproduce. Using classroom.blend or bmw27_cpu.blend freshly downloaded from blender.org
671b6d41c4 Linux Intel

I am not able to reproduce. Using classroom.blend or bmw27_cpu.blend freshly downloaded from blender.org 671b6d41c4 Linux Intel

Added subscriber: @fclem

Added subscriber: @fclem

Here the problem is evident:
inst_bug.gif

Operating system: Windows-10-10.0.18941 64 Bits
Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.13586 Core Profile Context 19.50.01.05 26.20.15001.5006

@fclem, can you repro the problem?

Here the problem is evident: ![inst_bug.gif](https://archive.blender.org/developer/F8428572/inst_bug.gif) **Operating system:** Windows-10-10.0.18941 64 Bits **Graphics card:** Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.13586 Core Profile Context 19.50.01.05 26.20.15001.5006 @fclem, can you repro the problem?
Clément Foucault self-assigned this 2020-03-26 16:26:53 +01:00

I can reproduce with proprietary drivers on linux. Seems linked to instanced rendering.

I can reproduce with proprietary drivers on linux. Seems linked to instanced rendering.

This is caused by MultiDrawIndirect in conjunction with (hypothetically) reading a default non enabled attribute (which should give default color of vec4(0.0, 0.0, 0.0, 1.0)). The attrib is not even always read.

  if (materialIndex == 0) {
    color_interp = ac.rgb;
  }

My instinct tells me that the driver creates a dummy VBO for non enabled attribs but this VBO is not configured correctly when doing MDI so we get an out of bound read and undefined behavior.

This is a bug in the GL driver implementation.

This is caused by MultiDrawIndirect in conjunction with (hypothetically) reading a default non enabled attribute (which should give default color of vec4(0.0, 0.0, 0.0, 1.0)). The attrib is not even always read. ``` if (materialIndex == 0) { color_interp = ac.rgb; } ``` My instinct tells me that the driver creates a dummy VBO for non enabled attribs but this VBO is not configured correctly when doing MDI so we get an out of bound read and undefined behavior. This is a bug in the GL driver implementation.
Member

@Prodeous can you upload the system-info.txt generated from blenders' Help menu to this ticket. This file contains information about the driver you are using.

@Prodeous can you upload the system-info.txt generated from blenders' Help menu to this ticket. This file contains information about the driver you are using.
Member

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'

This issue was referenced by 56e0249489

This issue was referenced by 56e0249489ce89954a54d5006ddf4147dd02e208

Changed status from 'Needs User Info' to: 'Resolved'

Changed status from 'Needs User Info' to: 'Resolved'

{F8429216}I used Radeon 20.3.1 drivers (latest). Note that all three version (as per origianl post) were done on the same system, so not a driver issue. eager to test that workaround when its out. but for completeness attached the requested system info file.

Another point, and the original BUG report. The "Parenting" of the wheel on the BMW27 file is broken after version 2.80. in 2.82a and latest the wheel is rotated almost 180*.. not a full 180, but definitley not as it should.

I can't replicate this with other files, but this file was pulled from blender demo files, so should be possible to replicate.

{[F8429216](https://archive.blender.org/developer/F8429216/system-info.txt)}I used Radeon 20.3.1 drivers (latest). Note that all three version (as per origianl post) were done on the same system, so not a driver issue. eager to test that workaround when its out. but for completeness attached the requested system info file. Another point, and the original BUG report. The "Parenting" of the wheel on the BMW27 file is broken after version 2.80. in 2.82a and latest the wheel is rotated almost 180*.. not a full 180, but definitley not as it should. I can't replicate this with other files, but this file was pulled from blender demo files, so should be possible to replicate.
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:38:06 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75069
No description provided.